Update website branding and demo sites

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zentry - Advanced Business Automation Systems</title>
+    <title>Vuenty - Advanced Business Automation Systems</title>
     <meta name="description" content="Deploy intelligent automation systems that transform business operations. AI chatbots, custom websites, lead generation protocols, and automated booking systems engineered for maximum efficiency." />
     <style>
       .animation-delay-2000 {
